some updates to my webpage with photos

--- a/_posts/2015-03-22-i-am-cse.md
+++ b/_posts/2015-03-22-i-am-cse.md
@@ -1,12 +1,9 @@
 ---
 layout: post
 shortnews: true
+photo: "/img/Zhang_I-Am-CSE.png"
+title: I am CSE!
 ---
-
-<div class="col-xs-4 pull-right">
-<img src="{{ site.base }}/img/Zhang_I-Am-CSE.png" alt="I am CSE photo"
-       class="img-thumbnail">
-</div>
 
 UW CSE has created a series of short videos showcasing research in the
 department and, apparently, I am CSE!  Learn more from Ed at the [CSE
