--- a/_posts/2015-04-02-tapir.md
+++ b/_posts/2015-04-02-tapir.md
@@ -2,16 +2,19 @@
 layout: post
 shortnews: false
 title: Lessons learned from TAPIR(s)
+photo: 'https://c2.staticflickr.com/6/5510/11690414524_4a2d975825_b.jpg'
 ---
 
-Having just finished yet another iteration of the TAPIR paper, I
-thought I would try to distill what I have learned from the
-project. The photos of baby tapirs are completely gratuitous.
+Having just finished yet another iteration of the [TAPIR
+paper]({{site.base}}/research/tapir/), I thought I would try to
+distill what I have learned from the project. It has been a much
+harder and more interesting project than I anticipated but the photos
+of baby tapirs helped me get through it.
 
 ### 1. Replication protocols should be co-designed with the systems that use them, *not* applications.
 
 <div class="col-xs-4 pull-right">
-<img src="http://i.imgur.com/xJjwVhP.jpg" alt="Felix the tapir"
+<img src="https://i.imgur.com/xJjwVhP.jpg" alt="Felix the tapir"
       class="img-thumbnail">
 </div>
 
@@ -73,7 +76,7 @@ necessary to ensure mutual exclusion.
 
 Even more interesting, a transactional storage system wants strictly
 serializable transactions, which requires a linearizable ordering of
-transaction but only requires a *partial* ordering of operations
+transactions but only requires a *partial* ordering of operations
 (because not all transactions touch all keys).  With some careful
 design in TAPIR, we are able to enforce a linearizable ordering of
 transactions with *no* ordering of operations.
@@ -82,7 +85,7 @@ transactions with *no* ordering of operations.
 ### 3. We can still provide the same strong guarantees to applications without consistency!
 
 <div class="col-xs-4 pull-right">
-<img src="http://37.media.tumblr.com/2d3ef9090bd30d760d621dfca6512a65/tumblr_mojh9fi4Ef1qd479ro1_500.jpg" alt="Felix the tapir"
+<img src="https://37.media.tumblr.com/2d3ef9090bd30d760d621dfca6512a65/tumblr_mojh9fi4Ef1qd479ro1_500.jpg" alt="Felix the tapir"
       class="img-thumbnail">
 </div>
 
@@ -98,13 +101,15 @@ coordination, similar to eventual consistency protocols.
 
 But, unlike eventual consistency, IR allows distributed systems to
 *avoid* conflicts before they happen, rather than resolving them after
-they happen. This allows systems retain strong guarantees for their
+they happen. This allows systems to retain strong guarantees for their
 applications and hide any inconsistencies from application
 programmers. IR's limitation is that it can only support system
-guarantees that are pair-wise.  For example, we can build a lock
-server that provides mutual exclusion but not a store that only sells
-thing that are in stock because calculating the store's stock requires
-a full history of operations that only strong consistency can achieve.
+guarantees that depend on conflicts between *pairs* of operations.
+For example, IR can be used to replicate a lock server but not a sales
+app that only sells thing in stock. The lock server's mutual exclusion
+guarantee is a pair-wise invariant, but calculating the store's stock
+requires a full history of operations that only strong consistency can
+achieve.
 
 ### 4. Good clock synchronization is available and we should use it.
 
@@ -124,11 +129,12 @@ When we first started testing on our local cluster using PTP [8],
 which is available as a Linux package and does not require any special
 hardware, the clock synchronization was so good that it broke our
 random number generator because we were seeding it with the clock!  As
-others [2] have noticed, PTP is able to offer at least sub-microsecond
+others [9] have noticed, PTP is able to offer at least sub-microsecond
 synchronization without any special support. When we moved to
-wide-area experiments using Google Compute Engine [3], we found clocks
-skews within milliseconds, even though we were using virtual machines
-over the wide-area.
+wide-area experiments using [Google Compute
+Engine](https://cloud.google.com/compute/), we found clocks skews
+within milliseconds, even though we were using virtual machines over
+the wide-area.
 
 <!---
 Table 1 gives a profile of our Google Compute
@@ -152,7 +158,7 @@ measured 100% of baby tapirs to be extremely cute.
 ### Summary
 
 <div class="col-xs-4 pull-right">
-<img src="http://caveviews.blogs.com/.a/6a00d8341bffd953ef017d4295b0d2970c-pi" alt="Felix the tapir"
+<img src="https://caveviews.blogs.com/.a/6a00d8341bffd953ef017d4295b0d2970c-pi" alt="Felix the tapir"
       class="img-thumbnail">
 </div>
 
@@ -196,7 +202,12 @@ ATC, 2010.
 
 [6] L. Lamport. *Paxos Made Simple.* ACM Sigact News, 2001.
 
-[7] D. Ongaro and J. Ousterhout. *In Search of an Understandable Consensus Algorithm.* Proc. USENIX Annual Technical Conference. 2014.
+[7] D. Ongaro and J. Ousterhout. *In Search of an Understandable
+Consensus Algorithm.* In Proc. of USENIX ATC. 2014.
 
-[8] [IEEE 1588 Standard for A Precision Clock Synchronization Protocol for Networked Measurement and Control
+[8] [IEEE 1588 Standard for A Precision Clock Synchronization Protocol
+for Networked Measurement and Control
 Systems.](http://www.nist.gov/el/isd/ieee/ieee1588.cfm.)
+
+[9] J. Perry, et al. *Fastpass: a centralized zero-queue
+datacenter network.* In Proc. of SIGCOMM. 2014.
