--- a/_posts/2015-1-22-msr.md
+++ b/_posts/2015-1-22-msr.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 shortnews: true
+title: MSR PhD Fellowship
+photo: 'http://upload.wikimedia.org/wikipedia/en/archive/b/b3/20110309193628!Microsoft_Research_logo.jpg'
 ---
 
 Microsoft Research has just named me a 2015
