--- a/_posts/2015-06-10-pocsci.md
+++ b/_posts/2015-06-10-pocsci.md
@@ -6,8 +6,8 @@ photo: https://news.cs.washington.edu/wp-content/uploads/2015/06/speaker.jpg
 
 I recently co-chaired the Symposium on Potentially Computer Science
 (PoCSci '15). As many people know, PoCSci is the premier venue for
-fake computer science research and as always there was a lot of
-exciting work presented, especially from our
+fake computer science research, and there was a lot of exciting work
+presented this year, especially from our
 [keynote speaker](http://pdos.csail.mit.edu/~strib/). More on the
 event at the
 [CSE News](https://news.cs.washington.edu/2015/06/05/15th-annual-uw-cse-symposium-on-potentially-computer-science-pocsci-15/).
