adding TAPIR SOSP accept

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -226,6 +226,12 @@
 
 \begin{rtable}
  \begin{rsection}{Conference\\Publications}
+   \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
+   R. K. Ports, Arvind Krishnamurthy. \textit{Building Consistent
+     Transactions with Inconsistent Replication.}.  In Proceedings of
+   the ACM Symposium on Operating Systems Principles (SOSP). Monterey,
+   CA. October 2015.\\\vspace{-0.5em}
+
    \textbf{Irene Zhang}, Adriana Szekeres, Dana Van Aken, Isaac
    Ackerman, Steven D. Gribble, Arvind Krishnamurthy, Henry
    M. Levy. \textit{Customizable and Extensible Deployment for
@@ -265,12 +271,7 @@
    Implementation (NSDI).  Boston, MA. April 2009. \\\vspace{-0.5em}
   \end{rsection}
 
-  \begin{rsection}{In Submission}
-    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-    R. K. Ports,
-    Arvind Krishnamurthy. \textit{Building Consistent Transactions with Inconsistent
-      Replication.}\\\vspace{-0.5em}
-    
+  \begin{rsection}{In Submission}    
     Adriana Szekeres, \textbf{Irene Zhang}, Katelin Bailey, Isaac
     Ackerman, Haichen Shen, Franziska Roesner, Dan R. K. Ports, Arvind
     Krishnamurthy, Henry M. Levy. \textit{Operating Systems Support
