--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -7,8 +7,6 @@
 @string{hot_storage = "Proceedings of the USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage)"}
 @string{papoc = "Proceedings of the Workshop on Principles and Practice of Consistency for Distributed Data (PaPoC)"}
 
-
-
 @InProceedings{holt15-claret,
   author = 	 {Brandon Holt and Irene Zhang and Dan R. K. Ports and Mark Oskin and Luis Ceze},
   title = 	 {Claret: Using Data Types for Highly Concurrent Distributed Transactions},
@@ -16,16 +14,15 @@
   year = 	 2015,
   month = 	 4}
 
-@TechReport{zhang14-build_consis_trans_incon_replic,
+@InProceedings{zhang14-build_consis_trans_incon_replic,
   author = 	 {Irene Zhang and Naveen Kr. Sharma and Adriana
                   Szekeres and Arvind Krishnamurhty and Dan
                   R. K. Ports},
   title = 	 {Building Consistent Transactions with Inconsistent
                   Replication},
-  institution =  {University of Washington},
-  year = 	 2014,
-  number = 	 {UW-CSE-14-12-01},
-  month = 	 12,
+  year = 	 2015,
+  booktitle = sosp,
+  month = 	 10,
   abstract={Application programmers increasingly prefer distributed
                   storage systems with distributed transactions and
                   strong consistency (e.g., Google's Spanner) for
@@ -53,8 +50,7 @@
                   storage. Compared to system using conventional
                   transaction protocols that require replication with
                   strong consistency, TAPIR-KV has 2x better
-                  latency \emph{and} throughput.},
-url={papers/tapir-tr14.pdf}
+                  latency \emph{and} throughput.}
 }
 
 @InProceedings{zhang14-custom_exten_deploy_mobil_cloud_applic,
