updating CV with SOSP and Affiliates talks

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -312,14 +312,16 @@
 
 \begin{rtable}
   \begin{rsection}{Awards}
-
+    \begin{rentry}{UW CSE Industrial Affiliates Madrona Prize Runner-Up}{2015}
+      \vspace{-0.5em}
+    \end{rentry} 
     \begin{rentry}{Google Anita Borg Memorial Fellowship}{2015}
       \vspace{-0.5em}
     \end{rentry} 
     \begin{rentry}{Microsoft Research PhD Fellowship}{2015}
       \vspace{-0.5em}
     \end{rentry} 
-    \begin{rentry}{Industrial Affiliates Madrona Prize}{2014}
+    \begin{rentry}{UW CSE Industrial Affiliates Madrona Prize}{2014}
        \vspace{-0.5em}
     \end{rentry}
     \begin{rentry}{OSDI Best Paper Award}{2014}
@@ -381,13 +383,15 @@
     \end{rentry}
     \begin{rentry}{Building Consistent Transactions with Inconsistent
         Replication}{}
+      \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2015}
+      \rline{Symposium on Operating Systems Principles (SOSP)}{Oct 2015}
       \rline{Amazon Tech Talk, Host: Andrew Certain}{Nov 2014}
       \vspace{-0.5em}
     \end{rentry}
     \begin{rentry}{Customizable and Extensible Deployment for
         Mobile/Cloud Applications}{}
       \rline{MSR Tech Talk, Host: Phil Bernstein}{Nov 2014}
-      \rline{UW CSE Industrial Affiliates Meeting}{Oct 2014}
+      \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2014}
       \rline{Symposium on Operating Systems Design and
         Implementation (OSDI)}{Oct 2014}
       \rline{UW Systems Seminar}{Oct 2014}
@@ -410,7 +414,9 @@
       \vspace{-0.5em}
     \end{rentry}
   \end{rsection}
+\end{rtable}
 
+\begin{rtable}
   \begin{rsection}{Press}
     \textit{Cutting-edge server operating system wins UW computer
       science prize.} GeekWire. October 23, 2014.\\\vspace{-0.5em}
@@ -418,9 +424,6 @@
     \textit{Faster websites, more reliable data.}
     MIT News. October 14, 2010.
   \end{rsection}
-\end{rtable}
-
-\begin{rtable}
 
   \begin{rsection}{Service}
     \begin{rentry}{UW Conference on Potentially
