adding TAPIR text

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -275,7 +275,16 @@
     Adriana Szekeres, \textbf{Irene Zhang}, Katelin Bailey, Isaac
     Ackerman, Haichen Shen, Franziska Roesner, Dan R. K. Ports, Arvind
     Krishnamurthy, Henry M. Levy. \textit{Operating Systems Support
-      for User-controlled Privacy.}\\\vspace{-0.5em}
+      for User-controlled Privacy.}\\\vspace{-0.5em} 
+
+    \textbf{Irene Zhang}, Niel Lebeck, Pedro Fonseca, Brandon Holt,
+    Arvind Krishnamurthy, Henry M. Levy. \textit{Diamond: A Wide-Area
+      Transparent Data Structure Store for Mobile/Cloud
+      Applications.}\\\vspace{-0.5em}
+
+    Brandon Holt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin,
+    Luis Ceze. \textit{Claret: Avoiding Contention in Distributed
+      Transactions with Abstract Data Types.}\\\vspace{-0.5em} 
   \end{rsection}
   
   \begin{rsection}{Workshop Publications}
@@ -293,21 +302,21 @@
     USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014. \\\vspace{-0.5em}
   \end{rsection}
 
-  \begin{rsection}{Posters \&\\Extended\\Abstracts}
-    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-    R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
-      Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\\vspace{-0.5em}
+  % \begin{rsection}{Posters \&\\Extended\\Abstracts}
+  %   \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
+  %   R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
+  %     Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\\vspace{-0.5em}
 
-    \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
-    C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
-      Checkpointed Memory Using Working Set Estimation.} ACM Symposium
-    on Operating Systems Principles (SOSP).  Big Sky, MT. October
-    2009.\\\vspace{-0.5em}
+  %   \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
+  %   C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
+  %     Checkpointed Memory Using Working Set Estimation.} ACM Symposium
+  %   on Operating Systems Principles (SOSP).  Big Sky, MT. October
+  %   2009.\\\vspace{-0.5em}
 
-    \textbf{Irene Zhang}, Kenneth C. Barr.  \textit{Improving VMware
-      Workstation Restore using Working Set Estimation.}  VMworld
-    Conference. Las Vegas, NV. September 2008.\\ \vspace{-0.5em}
-  \end{rsection}
+  %   \textbf{Irene Zhang}, Kenneth C. Barr.  \textit{Improving VMware
+  %     Workstation Restore using Working Set Estimation.}  VMworld
+  %   Conference. Las Vegas, NV. September 2008.\\ \vspace{-0.5em}
+  % \end{rsection}
 \end{rtable}
 
 \begin{rtable}
