--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -324,6 +324,9 @@
     \begin{rentry}{UW CSE Industrial Affiliates Madrona Prize Runner-Up}{2015}
       \vspace{-0.5em}
     \end{rentry} 
+    \begin{rentry}{Bob Bandes Teaching Award Honorable Mention}{2015}
+      \vspace{-0.5em}
+    \end{rentry} 
     \begin{rentry}{Google Anita Borg Memorial Fellowship}{2015}
       \vspace{-0.5em}
     \end{rentry} 
@@ -435,14 +438,33 @@
   \end{rsection}
 
   \begin{rsection}{Service}
+    \begin{rentry}{Workshop on Hot Topics in Cloud Computing (HotCloud)}{}
+      \rline{Program Committee}{2016}
+       \vspace{-0.5em}
+    \end{rentry}
+    \begin{rentry}{UW Workshop on Hot Topics in Potentially Computer
+        Science (HotPoCSci)}{}
+      \rline{Program Co-chair}{2015}
+       \vspace{-0.5em}
+    \end{rentry}
     \begin{rentry}{UW Conference on Potentially
         Computer Science (PoCSci)}{}
       \rline{Program Co-chair}{2015}
        \vspace{-0.5em}
     \end{rentry}
+
+    \begin{rentry}{UW CSE Annual Women's Research Day}{}
+      \rline{Chair}{2016}
+      \rline{Founder}{2015}
+       \vspace{-0.5em}
+    \end{rentry}
+
     \begin{rentry}{UW Graduate Student Committee}{}
       \rline{Graduate Women's Event Coordinator}{2014-2015}
       \rline{Graduate Visit Days Committee Co-chair}{2013-2014}
+      \vspace{-0.5em}
+    \end{rentry}
+    \begin{rentry}{UW Undergrad Women Mentor}{2015-2016}
       \vspace{-0.5em}
     \end{rentry}
     \begin{rentry}{UW Graduate Student Mentor}{2013-2014}
@@ -458,6 +480,8 @@
 
   \begin{rsection}{Teaching}
     \begin{rentry}{Distributed Systems (CSE 452)}{}
+      \rline{Teaching Assistant, UW Department of CSE}{Winter
+        2016}   
       \rline{Teaching Assistant, UW Department of CSE}{Winter
         2015}   
       \vspace{-0.5em}   
