--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -127,7 +127,7 @@
     Operating systems, distributed systems, virtualization and networking
   \end{rsection}
   
-  \begin{rsection}{Research}
+  \begin{rsection}{Recent\\Research}
     \begin{rentry}{Building Consistent Transactions with Inconsistent
         Replication}{}
       TAPIR -- the Transactional Application Protocol for Inconsistent
@@ -225,7 +225,11 @@
 \end{rtable}
 
 \begin{rtable}
- \begin{rsection}{Conference\\Publications}
+ \begin{rsection}{Publications}
+   \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
+   R. K. Ports, Arvind Krishnamurthy. \textit{When Is Operation
+     Ordering Required in Replicated Transactional Storage?}.  IEEE  October 2015.\\\vspace{-0.5em}
+
    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
    R. K. Ports, Arvind Krishnamurthy. \textit{Building Consistent
      Transactions with Inconsistent Replication.}.  In Proceedings of
@@ -301,26 +305,29 @@
       Storage Management.} In Proceedings of the
     USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014. \\\vspace{-0.5em}
   \end{rsection}
-
-  % \begin{rsection}{Posters \&\\Extended\\Abstracts}
-  %   \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-  %   R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
-  %     Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\\vspace{-0.5em}
-
-  %   \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
-  %   C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
-  %     Checkpointed Memory Using Working Set Estimation.} ACM Symposium
-  %   on Operating Systems Principles (SOSP).  Big Sky, MT. October
-  %   2009.\\\vspace{-0.5em}
-
-  %   \textbf{Irene Zhang}, Kenneth C. Barr.  \textit{Improving VMware
-  %     Workstation Restore using Working Set Estimation.}  VMworld
-  %   Conference. Las Vegas, NV. September 2008.\\ \vspace{-0.5em}
-  % \end{rsection}
 \end{rtable}
 
 \begin{rtable}
+  \begin{rsection}{Posters \&\\Extended\\Abstracts}
+    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
+    R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
+      Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\\vspace{-0.5em}
+
+    \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
+    C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
+      Checkpointed Memory Using Working Set Estimation.} ACM Symposium
+    on Operating Systems Principles (SOSP).  Big Sky, MT. October
+    2009.\\\vspace{-0.5em}
+
+    \textbf{Irene Zhang}, Kenneth C. Barr.  \textit{Improving VMware
+      Workstation Restore using Working Set Estimation.}  VMworld
+    Conference. Las Vegas, NV. September 2008.\\ \vspace{-0.5em}
+  \end{rsection}
+
   \begin{rsection}{Awards}
+    \begin{rentry}{NCWIT Collegiate Award Runner-up}{2016}
+      \vspace{-0.5em}
+    \end{rentry} 
     \begin{rentry}{UW CSE Industrial Affiliates Madrona Prize Runner-Up}{2015}
       \vspace{-0.5em}
     \end{rentry} 
@@ -365,36 +372,15 @@
     \end{rentry}
   \end{rsection}
 
-  \begin{rsection}{Patents}
-    US Patent App. 12/559,484.\\
-    \textit{Saving and Restoring State Information for Virtualized Computer Systems.}\\
-    \textbf{I. Zhang}, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.\\\vspace{-0.5em}
-
-    US Patent App. 13/710,185.\\
-    \textit{Method for Saving Virtual Machine State from a Checkpoint
-    File.}\\
-    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
-    J. Pool.\\\vspace{-0.5em}
-
-    US Patent App. 13/710,215.\\
-    \textit{Method for Restoring Virtual Machine State from a Checkpoint
-    File.}\\
-    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
-    J. Pool.\\\vspace{-0.5em}
-    
-    US Patent App. 13/935,382.\\
-    \textit{Identification of Page Sharing Opportunities within Large
-      Pages.}\\
-    Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\
-  \end{rsection}
-
   \begin{rsection}{Talks}
-    \begin{rentry}{Operating Systems for Modern Applications}{}
+    \begin{rentry}{Distributed Operating Systems for Modern Applications}{}
       \rline{CSE Symposium}{Jan 2015}
       \vspace{-0.5em}
     \end{rentry}
     \begin{rentry}{Building Consistent Transactions with Inconsistent
         Replication}{}
+      \rline{MSR Tech Talk, Host: Myeongjae Jeon}{Mar 2016}
+      \rline{Google Tech Talk, Host: Daniel Myers}{Dec 2015}
       \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2015}
       \rline{Symposium on Operating Systems Principles (SOSP)}{Oct 2015}
       \rline{Amazon Tech Talk, Host: Andrew Certain}{Nov 2014}
@@ -429,6 +415,29 @@
 \end{rtable}
 
 \begin{rtable}
+  \begin{rsection}{Patents}
+    US Patent App. 12/559,484.\\
+    \textit{Saving and Restoring State Information for Virtualized Computer Systems.}\\
+    \textbf{I. Zhang}, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.\\\vspace{-0.5em}
+
+    US Patent App. 13/710,185.\\
+    \textit{Method for Saving Virtual Machine State from a Checkpoint
+    File.}\\
+    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    J. Pool.\\\vspace{-0.5em}
+
+    US Patent App. 13/710,215.\\
+    \textit{Method for Restoring Virtual Machine State from a Checkpoint
+    File.}\\
+    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    J. Pool.\\\vspace{-0.5em}
+    
+    US Patent App. 13/935,382.\\
+    \textit{Identification of Page Sharing Opportunities within Large
+      Pages.}\\
+    Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\
+  \end{rsection}
+
   \begin{rsection}{Press}
     \textit{Cutting-edge server operating system wins UW computer
       science prize.} GeekWire. October 23, 2014.\\\vspace{-0.5em}
@@ -478,7 +487,7 @@
     \end{rentry}
   \end{rsection}
 
-  \begin{rsection}{Teaching}
+  \begin{rsection}{Teaching\\UW}
     \begin{rentry}{Distributed Systems (CSE 452)}{}
       \rline{Teaching Assistant, UW Department of CSE}{Winter
         2016}   
@@ -487,6 +496,7 @@
       \vspace{-0.5em}   
     \end{rentry}
     \begin{rentry}{Introduction to Operating Systems (CSE 451)}{}
+      \rline{Tutor, UW Department of CSE}{Spring 2016}
       \rline{Tutor, UW Department of CSE}{Fall 2014}
       \rline{Tutor, UW Department of CSE}{Spring 2014}
       \rline{Guest Lecturer, UW Department of CSE}{Fall 2013}
@@ -498,6 +508,12 @@
       \rline{Tutor, UW Department of CSE}{Winter 2013}
       \vspace{-0.5em}
     \end{rentry}
+  \end{rsection}
+\end{rtable}
+
+\begin{rtable}
+  \vspace{1.0em}
+  \begin{rsection}{Teaching\\MIT}
     \begin{rentry}{Operating Systems Engineering (6.828)}{}
       \rline{Teaching Assistant, MIT Department of EECS}{Fall
         2008} 
@@ -533,10 +549,6 @@
       \vspace{-0.5em}
     \end{rentry}
   \end{rsection}
-\end{rtable}
-
-\begin{rtable}
-  \vspace{1.0em}
   \begin{rsection}{Work\\Experience}
     \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
       \rline{MTS, Virtual Machine Monitor
