adding IPA to cv

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -276,15 +276,17 @@
   \end{rsection}
 
   \begin{rsection}{In Submission}    
+    \textbf{Irene Zhang}, Niel Lebeck, Pedro Fonseca, Brandon Holt,
+    Arvind Krishnamurthy, Henry M. Levy. \textit{Diamond: Automating
+      Data Management and Storage for Wide-area, Reactive Applications}\\\vspace{-0.5em}
+
     Adriana Szekeres, \textbf{Irene Zhang}, Katelin Bailey, Isaac
     Ackerman, Haichen Shen, Franziska Roesner, Dan R. K. Ports, Arvind
-    Krishnamurthy, Henry M. Levy. \textit{Operating Systems Support
-      for User-controlled Privacy.}\\\vspace{-0.5em} 
+    Krishnamurthy, Henry M. Levy. \textit{Agate: A Privacy-enforcing
+      Distributed Operating System.}\\\vspace{-0.5em} 
 
-    \textbf{Irene Zhang}, Niel Lebeck, Pedro Fonseca, Brandon Holt,
-    Arvind Krishnamurthy, Henry M. Levy. \textit{Diamond: A Wide-Area
-      Transparent Data Structure Store for Mobile/Cloud
-      Applications.}\\\vspace{-0.5em}
+    Brandon Holt, James Bornholt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin,
+    Luis Ceze. \textit{Disciplined Inconsistency.}\\\vspace{-0.5em} 
 
     Brandon Holt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin,
     Luis Ceze. \textit{Claret: Avoiding Contention in Distributed
