updating my CV and webpage with new journal article and updating Diamond write-up

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -228,7 +228,8 @@
  \begin{rsection}{Publications}
    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
    R. K. Ports, Arvind Krishnamurthy. \textit{When Is Operation
-     Ordering Required in Replicated Transactional Storage?}.  IEEE  October 2015.\\\vspace{-0.5em}
+     Ordering Required in Replicated Transactional Storage?}.  IEEE Data
+   Engineering Bulletin. March 2016.\\\vspace{-0.5em}
 
    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
    R. K. Ports, Arvind Krishnamurthy. \textit{Building Consistent
