--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -7,6 +7,33 @@
 @string{hot_storage = "Proceedings of the USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage)"}
 @string{papoc = "Proceedings of the Workshop on Principles and Practice of Consistency for Distributed Data (PaPoC)"}
 
+
+
+@Article{zhang16:_when_is_operat_order_requir,
+  author = 	 {Irene Zhang and Naveen Kr. Sharma and Adriana Szekeres and Dan R. K. Ports and Arvind Krishnamurthy},
+  title = 	 {When Is Operation Ordering Required in Replicated Transactional Storage?},
+  journal = 	 {IEEE Data Engineering Bulletin},
+  year = 	 2016,
+  month = 3,
+  abstract={Today's replicated transactional storage systems typically have
+a layered architecture, combining protocols for transaction
+coordination, consistent replication, and concurrency control.  These
+systems generally require costly strongly-consistent replication
+protocols like Paxos, which assign a total order to all operations.
+To avoid this cost, we ask whether all replicated operations in these
+systems need to be strictly ordered. Recent research has yielded
+replication protocols that can avoid unnecessary ordering, e.g., by
+exploiting commutative operations, but it is not clear how to apply
+these to replicated transaction processing systems. We answer this
+question by analyzing existing transaction processing designs in terms
+of which replicated operations require ordering and which simply
+require fault tolerance.  We describe how this analysis leads to our
+recent work on TAPIR, a transaction protocol that efficiently provides
+strict serializability by using a new replication protocol that
+provides fault tolerance but not ordering for most operations.
+},
+url={papers/ordering-data.pdf}}
+
 @InProceedings{holt15-claret,
   author = 	 {Brandon Holt and Irene Zhang and Dan R. K. Ports and Mark Oskin and Luis Ceze},
   title = 	 {Claret: Using Data Types for Highly Concurrent Distributed Transactions},
