updating some bugs and changing to geoduck

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -9,7 +9,7 @@
 
 
 
-@Article{zhang16:_when_is_operat_order_requir,
+@Article{zhang16-when,
   author = 	 {Irene Zhang and Naveen Kr. Sharma and Adriana Szekeres and Dan R. K. Ports and Arvind Krishnamurthy},
   title = 	 {When Is Operation Ordering Required in Replicated Transactional Storage?},
   journal = 	 {IEEE Data Engineering Bulletin},
