adding cloud day talk to cv

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -382,6 +382,7 @@
     \end{rentry}
     \begin{rentry}{Building Consistent Transactions with Inconsistent
         Replication}{}
+      \rline{UW Cloud Day}{Jun 2016}
       \rline{MSR Tech Talk, Host: Myeongjae Jeon}{Mar 2016}
       \rline{Google Tech Talk, Host: Daniel Myers}{Dec 2015}
       \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2015}
