--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -462,6 +462,7 @@
     \end{rentry}
     \begin{rentry}{UW Conference on Potentially
         Computer Science (PoCSci)}{}
+      \rline{Program Co-chair}{2016}
       \rline{Program Co-chair}{2015}
        \vspace{-0.5em}
     \end{rentry}
