getting rid of random blank page

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -219,8 +219,7 @@
 %       multithreading, global shared address space, and no memory
 %       update, cycle-free heap.
 %     \end{rentry}
-%  \end{rsection}
-        
+%  \end{rsection}    
   \end{rsection}
 \end{rtable}
 
@@ -306,7 +305,7 @@
     R. K. Ports, Thomas Anderson, Arvind Krishnamurthy, Mark
     Zbikowski. \textit{Towards High-Performance Application-Level
       Storage Management.} In Proceedings of the
-    USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014. \\\vspace{-0.5em}
+    USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014. \vspace{-0.5em}
   \end{rsection}
 \end{rtable}
 
@@ -439,7 +438,7 @@
     US Patent App. 13/935,382.\\
     \textit{Identification of Page Sharing Opportunities within Large
       Pages.}\\
-    Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\
+    Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\\vspace{-0.5em}
   \end{rsection}
 
   \begin{rsection}{Press}
