--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -128,8 +128,21 @@
   \end{rsection}
   
   \begin{rsection}{Recent\\Research}
+    \begin{rentry}{Automating Data Management for Reactive
+        Applications}{OSDI '16}
+      \vspace{-.5em}\\
+      Diamond is a new data management system for wide-area, reactive
+      applications. Reactive applications give users the illusion of
+      continuous synchronization across mobile devices and the cloud
+      server. Diamond simplifies task by providing applications with
+      persistent cloud storage, reliable synchronization between
+      storage and mobile devices, and automated execution of
+      application code in response to shared data updates.
+    \end{rentry}
+
     \begin{rentry}{Building Consistent Transactions with Inconsistent
-        Replication}{}
+        Replication}{SOSP '15}
+      \vspace{-.5em}\\
       TAPIR -- the Transactional Application Protocol for Inconsistent
       Replication -- provides externally consistent transactions using a
       replication protocol with \emph{no consistency guarantees}.
@@ -139,8 +152,8 @@
         round-trip} and eliminate the bottleneck at the Paxos leader.
     \end{rentry}
 
-    \begin{rentry}{Customizable and Extensible Deployment for
-        Mobile/Cloud Applications}{}
+    \begin{rentry}{Deployment for Mobile/Cloud Applications}{OSDI '14}
+      \vspace{-.5em}\\
       Sapphire is a new distributed programming platform providing
       customizable and extensible deployment of mobile/cloud
       applications. The key concept is an architecture that supports
@@ -150,17 +163,20 @@
       deployment to meet their application's needs.
     \end{rentry}
 
-    \begin{rentry}{User-controlled Privacy for Mobile/Cloud Applications}{}
-      Agate is a new trusted distributed runtime system that gives
-      users control over how mobile/cloud applications share sensitive
-      user data collected on mobile devices (e.g., photos, GPS
-      location). Agate combines aspects of access control and
-      information flow control to allow applications to share user
-      data in application-specific ways, while enforcing user policies
-      without trusting the application or the application programmer.
-    \end{rentry}
+    % \begin{rentry}{User-controlled Privacy for Mobile/Cloud
+    %     Applications}{OSDI '14}
+    %   Agate is a new trusted distributed runtime system that gives
+    %   users control over how mobile/cloud applications share sensitive
+    %   user data collected on mobile devices (e.g., photos, GPS
+    %   location). Agate combines aspects of access control and
+    %   information flow control to allow applications to share user
+    %   data in application-specific ways, while enforcing user policies
+    %   without trusting the application or the application programmer.
+    % \end{rentry}
 
-    \begin{rentry}{Arrakis: The Operating System is the Control Plane}{}
+    \begin{rentry}{Arrakis: The Operating System is the Control
+        Plane}{OSDI '14}
+      \vspace{-.5em}\\
       Arrakis is a new operating system that provides high performance
       I/O by taking advantage of hardware virtualization
       technology. Hardware virtualization technologies are designed to
@@ -172,15 +188,15 @@
       customizability.
     \end{rentry}
 
-    \begin{rentry}{Improving VM Checkpoint Restore Performance}{} 
-      With collaborators at VMware, I developed two techniques for
-      improving the performance of restoring checkpointed virtual
-      machines. The first estimates and prefetches the working set of
-      the checkpointed VM on restore, improving the responsiveness of
-      the VM during restore. The second groups memory pages together
-      on disk that are likely to be accessed together, improving disk
-      efficiency during restore.
-    \end{rentry}
+    % \begin{rentry}{Improving VM Checkpoint Restore Performance}{} 
+    %   With collaborators at VMware, I developed two techniques for
+    %   improving the performance of restoring checkpointed virtual
+    %   machines. The first estimates and prefetches the working set of
+    %   the checkpointed VM on restore, improving the responsiveness of
+    %   the VM during restore. The second groups memory pages together
+    %   on disk that are likely to be accessed together, improving disk
+    %   efficiency during restore.
+    % \end{rentry}
 
     % \begin{rentry}{Transactional Consistency and Automatic Cache Management}{}
     %   In-memory application caches like memcached introduce
@@ -224,7 +240,18 @@
 \end{rtable}
 
 \begin{rtable}
- \begin{rsection}{Publications}
+ \begin{rsection}{Conference\\Publications}
+   \textbf{Irene Zhang}, Niel Lebeck, Pedro Fonseca, Brandon Holt,
+   Raymond Cheng, Ariadna Norberg, Arvind Krishnamurthy, Henry
+   M. Levy. \textit{Automating Data Management for Wide-area, Reactive
+     Applications.}  In Proceedings of the USENIX Symposium on
+   Operating Systems Design and Implementation (OSDI). Savannah,
+   GA. November 2016.\\ \vspace{-0.5em}
+
+   Brandon Holt, James Bornholt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin,
+   Luis Ceze. \textit{Disciplined Inconsistency.}   In Proceedings of the ACM Symposium
+   on Cloud Computing (SoCC). Santa Clara, CA. October 2016.\\ \vspace{-0.5em}
+
    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
    R. K. Ports, Arvind Krishnamurthy. \textit{When Is Operation
      Ordering Required in Replicated Transactional Storage?}.  IEEE Data
@@ -275,23 +302,16 @@
    Implementation (NSDI).  Boston, MA. April 2009. \\\vspace{-0.5em}
   \end{rsection}
 
-  \begin{rsection}{In Submission}    
-    \textbf{Irene Zhang}, Niel Lebeck, Pedro Fonseca, Brandon Holt,
-    Arvind Krishnamurthy, Henry M. Levy. \textit{Diamond: Automating
-      Data Management and Storage for Wide-area, Reactive Applications}\\\vspace{-0.5em}
+  % \begin{rsection}{In Submission}    
+  %   Adriana Szekeres, \textbf{Irene Zhang}, Katelin Bailey, Isaac
+  %   Ackerman, Haichen Shen, Franziska Roesner, Dan R. K. Ports, Arvind
+  %   Krishnamurthy, Henry M. Levy. \textit{Agate: A Privacy-enforcing
+  %     Distributed Operating System.}\\\vspace{-0.5em} 
 
-    Adriana Szekeres, \textbf{Irene Zhang}, Katelin Bailey, Isaac
-    Ackerman, Haichen Shen, Franziska Roesner, Dan R. K. Ports, Arvind
-    Krishnamurthy, Henry M. Levy. \textit{Agate: A Privacy-enforcing
-      Distributed Operating System.}\\\vspace{-0.5em} 
-
-    Brandon Holt, James Bornholt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin,
-    Luis Ceze. \textit{Disciplined Inconsistency.}\\\vspace{-0.5em} 
-
-    Brandon Holt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin,
-    Luis Ceze. \textit{Claret: Avoiding Contention in Distributed
-      Transactions with Abstract Data Types.}\\\vspace{-0.5em} 
-  \end{rsection}
+  %   Brandon Holt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin,
+  %   Luis Ceze. \textit{Claret: Avoiding Contention in Distributed
+  %     Transactions with Abstract Data Types.}\\\vspace{-0.5em} 
+  % \end{rsection}
   
   \begin{rsection}{Workshop Publications}
     Brandon Holt, \textbf{Irene Zhang}, Dan R. K. Ports, Mark Oskin and Luis
@@ -305,16 +325,18 @@
     R. K. Ports, Thomas Anderson, Arvind Krishnamurthy, Mark
     Zbikowski. \textit{Towards High-Performance Application-Level
       Storage Management.} In Proceedings of the
-    USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014. \vspace{-0.5em}
+    USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage). Philadelphia, PA. June 2014.\\\vspace{-0.5em}
+  \end{rsection}
+
+  \begin{rsection}{Posters \&\\Extended\\Abstracts}
+    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
+    R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
+      Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.
   \end{rsection}
 \end{rtable}
 
 \begin{rtable}
-  \begin{rsection}{Posters \&\\Extended\\Abstracts}
-    \textbf{Irene Zhang}, Naveen Kr. Sharma, Adriana Szekeres, Dan
-    R. K. Ports, Arvind Krishnamurthy. \textit{Optimistic, Replicated
-      Two-Phase Commit.}  ACM Asia-Pacific Workshop on Systems (APSys). Beijing, China. June 2014.\\\vspace{-0.5em}
-
+  \begin{rsection}{}
     \textbf{Irene Zhang}, Alex Garthwaite, Yury Baskakov, Kenneth
     C. Barr, Jesse Pool, Kevin Christopher. \textit{Fast Restore of
       Checkpointed Memory Using Working Set Estimation.} ACM Symposium
@@ -419,26 +441,21 @@
 
 \begin{rtable}
   \begin{rsection}{Patents}
-    US Patent App. 12/559,484.\\
-    \textit{Saving and Restoring State Information for Virtualized Computer Systems.}\\
+    US Patent App. 12/559,484.
+    \textit{Saving and Restoring State Information for Virtualized
+      Computer Systems.} 
     \textbf{I. Zhang}, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.\\\vspace{-0.5em}
 
-    US Patent App. 13/710,185.\\
+    US Patent App. 13/710,185. 
     \textit{Method for Saving Virtual Machine State from a Checkpoint
-    File.}\\
-    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    File.}  A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
     J. Pool.\\\vspace{-0.5em}
 
-    US Patent App. 13/710,215.\\
-    \textit{Method for Restoring Virtual Machine State from a Checkpoint
-    File.}\\
-    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    US Patent App. 13/710,215. \textit{Method for Restoring Virtual Machine State from a Checkpoint
+    File.} A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
     J. Pool.\\\vspace{-0.5em}
     
-    US Patent App. 13/935,382.\\
-    \textit{Identification of Page Sharing Opportunities within Large
-      Pages.}\\
-    Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\\vspace{-0.5em}
+    US Patent App. 13/935,382. \textit{Identification of Page Sharing Opportunities within Large Pages.} Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\\vspace{-0.5em}
   \end{rsection}
 
   \begin{rsection}{Press}
@@ -456,7 +473,7 @@
     \end{rentry}
     \begin{rentry}{UW Workshop on Hot Topics in Potentially Computer
         Science (HotPoCSci)}{}
-      \rline{Program Co-chair}{2015}
+      \rline{Workshop Founder}{2015}
        \vspace{-0.5em}
     \end{rentry}
     \begin{rentry}{UW Conference on Potentially
@@ -491,7 +508,7 @@
     \end{rentry}
   \end{rsection}
 
-  \begin{rsection}{Teaching\\UW}
+  \begin{rsection}{Teaching\\@UW}
     \begin{rentry}{Distributed Systems (CSE 452)}{}
       \rline{Teaching Assistant, UW Department of CSE}{Winter
         2016}   
@@ -517,7 +534,7 @@
 
 \begin{rtable}
   \vspace{1.0em}
-  \begin{rsection}{Teaching\\MIT}
+  \begin{rsection}{Teaching\\@MIT}
     \begin{rentry}{Operating Systems Engineering (6.828)}{}
       \rline{Teaching Assistant, MIT Department of EECS}{Fall
         2008} 
