--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -134,8 +134,8 @@
       Diamond is a new data management system for wide-area, reactive
       applications. Reactive applications give users the illusion of
       continuous synchronization across mobile devices and the cloud
-      server. Diamond simplifies task by providing applications with
-      persistent cloud storage, reliable synchronization between
+      server. Diamond simplifies this task by providing applications
+      with persistent cloud storage, reliable synchronization between
       storage and mobile devices, and automated execution of
       application code in response to shared data updates.
     \end{rentry}
