updating some links

--- a/_posts/2016-07-31-osdi-socc-2016.md
+++ b/_posts/2016-07-31-osdi-socc-2016.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 shortnews: true
-photo: img/osdi16.png
+photo: https://www.usenix.org/sites/default/files/osdi16_button_180.png
 ---
 
 Our paper on the Diamond automated data management platform will
