updating cv and reducing news posts

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -306,6 +306,9 @@
   \end{rsection}
 
   \begin{rsection}{Awards}
+    % \begin{rentry}{Rising Stars Workshop}{2016}
+    %   \vspace{-0.5em}
+    % \end{rentry} 
     \begin{rentry}{NCWIT Collegiate Award Runner-up}{2016}
       \vspace{-0.5em}
     \end{rentry} 
